# Image-Processing-Library

./: CMakeLists.txt  README.md  driver.cpp
lib/include/: Image.h  Pixel.h
lib/src/: Image.cpp  Pixel.cpp
